# personal-workspace

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  extensions_backup.txt  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: deploy.yml  main.yml
docs/: github-strategy.md  index.md  learning-journey.md  nocobase-guide.md  nocobase-setup.md  requirements.txt  setup-status.md  workspace-setup.md
docs/api/: README.md
docs/architecture/: overview.md
docs/development/: getting_started.md
nginx/conf/: default.conf
projects/: README.md
projects/AI_Crypto_Price_Predictor/: .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  development_guide.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  tox.ini
projects/AI_Crypto_Price_Predictor/.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
projects/AI_Crypto_Price_Predictor/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
projects/AI_Crypto_Price_Predictor/.github/workflows/: ci.yml
projects/AI_Crypto_Price_Predictor/docs/: developer_guidelines.md
projects/AI_Crypto_Price_Predictor/src/: __init__.py
projects/AI_Crypto_Price_Predictor/tests/: test_init.py
projects/Document_Digitization_OCR_System/: README.md  development_guide.md  pyproject.toml
projects/Document_Digitization_OCR_System/docs/: developer_guidelines.md
projects/Document_Digitization_OCR_System/src/: __init__.py
projects/Document_Digitization_OCR_System/tests/: test_init.py
projects/University_Marketing_Analytics_Tool/: README.md  development_guide.md
projects/University_Marketing_Analytics_Tool/docs/: developer_guidelines.md
projects/University_Marketing_Analytics_Tool/src/: __init__.py
projects/University_Marketing_Analytics_Tool/tests/: test_init.py
reports/: junit.xml
scripts/: backup_manager.sh  check-database-installations.ps1  create_admin.py  db_manager.sh  dependency_manager.sh  dev_workflow.sh  docker_helper.sh  env_setup.sh  monitor.sh  project_manager.sh  setup.sh  setup_hooks.sh
tests/utils/: README.md  __init__.py  conftest.py  setup.py  test_config.py  test_helpers.py
tests/utils/test_data/: db_utils.py  test_db_config.json  test_samples.json  test_schemas.py
tests/utils/tests/: conftest.py  test_config_test.py  test_data_test.py  test_db_utils.py  test_helpers_test.py
