[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-price-predictor"
version = "0.1.0"
description = "Machine learning model for cryptocurrency price prediction"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "CosmosLabs", email = "contact@cosmaslabs.com"}
]
maintainers = [
    {name = "CosmosLabs", email = "contact@cosmaslabs.com"}
]
keywords = ["machine learning", "cryptocurrency", "price prediction", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-binance>=1.0.19",
    "pydantic>=2.6.0",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "prometheus-client>=0.19.0",
    "redis>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

gpu = [
    "tensorflow-gpu>=2.15.0",
    "torch>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/cosmaslabs/personal-workspace"
Documentation = "https://github.com/cosmaslabs/personal-workspace/docs"
Repository = "https://github.com/cosmaslabs/personal-workspace.git"
Issues = "https://github.com/cosmaslabs/personal-workspace/issues"
Changelog = "https://github.com/cosmaslabs/personal-workspace/blob/main/CHANGELOG.md"

[project.scripts]
crypto-predict = "src.models.train:main"
crypto-api = "src.api.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint]
max-line-length = 88
disable = ["C0330", "C0326"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
